# open-ds2-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: openssl-legacy.cnf
docs/: 01-solidshield-unpacking.md  02-activation-dll-analysis.md  03-main-executable-analysis.md  04-blaze-connection-analysis.md  CLIENT_PATCHING.md  PROTOCOL.md  README.md  REVERSE_ENGINEERING.md  activation_dll_analysis.md  activation_dll_encryption.md  activation_dll_reverse_engineering.md  binary_encryption_analysis.md  blaze_structures.txt  ssl_verification_analysis.md  themida_analysis.md
scripts/: aggressive_ssl_trace.gdb  apply_patch_early.sh  break_cert_read.gdb  create_ssl_patch.py  debug_ssl_handshake.gdb  deep_debug_ssl.gdb  dump_deadspace2_exe.py  dump_deadspace_exe.py  find_process.py  find_set_verify_impl.py  find_ssl_ctx.py  find_ssl_path.gdb  find_ssl_verify.py  find_ssl_verify2.py  find_verify_callback.py  find_verify_callers.py  find_x509_verify.py  fix_ssl_patch.gdb  generate_certs.sh  memory_dumper.py  patch_and_trace_ssl.sh  patch_ssl_ctx.gdb  patch_ssl_live.gdb  skip_ssl_verify.gdb  trace_connect.gdb  trace_socket.gdb  trace_ssl_handshake.gdb  trace_syscall_num.gdb  trace_winsock.gdb  verify_second_path.gdb  watch_cert_access.gdb  xtea_layer1_decrypt.py
server/: CMakeLists.txt  README.md
server/include/: server.hpp
server/include/blaze/: component.hpp  packet.hpp  tdf.hpp  types.hpp
server/include/components/: authentication.hpp  game_manager.hpp  redirector.hpp  util.hpp
server/include/network/: client_connection.hpp  qos_server.hpp  ssl_server.hpp
server/include/utils/: config.hpp  logger.hpp
server/scripts/: generate_certs.sh
server/src/: main.cpp  server.cpp
server/src/blaze/: component.cpp  packet.cpp  tdf.cpp
server/src/components/: authentication.cpp  game_manager.cpp  redirector.cpp  util.cpp
server/src/network/: client_connection.cpp  qos_server.cpp  ssl_server.cpp
server/src/utils/: config.cpp  logger.cpp
src/: main.cpp
src/blaze/: blaze_codec.cpp  blaze_codec.hpp  blaze_server.cpp  blaze_server.hpp  blaze_types.hpp  components.cpp  components.hpp  tdf.cpp  tdf.hpp
src/database/: database.cpp  database.hpp  player_repository.cpp  player_repository.hpp
src/network/: packet.cpp  packet.hpp  packet_handler.cpp  packet_handler.hpp  ssl_socket.cpp  ssl_socket.hpp  tcp_server.cpp  tcp_server.hpp  udp_server.cpp  udp_server.hpp
src/protocol/: auth_handler.cpp  auth_handler.hpp  ds2_protocol.cpp  ds2_protocol.hpp  game_handler.cpp  game_handler.hpp  lobby_handler.cpp  lobby_handler.hpp
src/utils/: buffer.cpp  buffer.hpp  crypto.cpp  crypto.hpp  logger.cpp  logger.hpp
tests/: run_tests.cpp  test_blaze_codec.cpp  test_framework.hpp  test_tdf.cpp
tools/: README.md  apply_patch.py  deep_analysis.py  ds2_patcher.py  ssl_pattern_finder.py
tools/analysis/: activation_decryptor.py  decrypt_activation.py  dll_analyzer.py  xtea_decrypt.py
tools/hook/: ds2_ssl_hook.c
tools/patches/: steam_fde0585b.json  template.json
tools/proxy_dll/: dinput8_proxy.c  winhttp_proxy.c
tools/runtime_patcher/: README.md  ds2_code_patcher.c  ds2_dumper.c  ds2_full_patcher.c  ds2_selfsigned_patcher.c  ds2_ssl_bypass.c  ds2_ssl_bypass_v2.c  ds2_ssl_bypass_v3.c  ds2_ssl_bypass_v4.c  ds2_ssl_bypass_v5.c  ds2_ssl_bypass_v6.c  ds2_ssl_bypass_v7.c  ds2_ssl_bypass_v8.c  ds2_ssl_patcher.c  ds2_ssl_patcher_final.c  ds2_ssl_patcher_v10.c  ds2_ssl_patcher_v11.c  ds2_ssl_patcher_v2.c  ds2_ssl_patcher_v3.c  ds2_ssl_patcher_v4.c  ds2_ssl_patcher_v5.c  ds2_ssl_patcher_v6.c  ds2_ssl_patcher_v7.c  ds2_ssl_patcher_v8.c  ds2_ssl_patcher_v9.c  ds2_verify_patcher.c  generate_patcher.py  launch_and_patch.sh  launch_with_patcher.sh
